my cha t&c, and edits

--- a/mycha_mob/about.html
+++ b/mycha_mob/about.html
@@ -96,31 +96,10 @@
 					
 				</div>
 			</section>
-		    <section id="terms">
-			  <h3>Terms & Conditions</h3>
-			  <p>Read General Terms & Conditions of Sale<br />
-				Payments<br />
-				Returns Policy<br />
-				Privacy Policy & Security<br />
-				Copyright<br />
-				General Contact Information</p>
-		    </section>
-			
 		</main>
 		<footer>
 			<p id="legal">&#169;2017 My Cha</p>
-			<!-- <a href="#press">
-						<img src="images2/" alt="">
-						<div>
-							<h4>press</h4>
-						</div>
-					</a>
-					<a href="#contacto">
-						<img src="images2/" alt="">
-						<div>
-							<h4>contacto</h4>
-						</div>
-					</a> -->
+			<a href="./terms.html">Terms &amp; Conditions</a>
 		</footer>
 	</div>
 </body>
