--- a/mycha_mob/buy.html
+++ b/mycha_mob/buy.html
@@ -44,30 +44,7 @@
 		</header>
 		<main>
 			<h2>shop my cha!</h2>
-			<section class="tea_family">
-			        <a href="#">
-				        <img class="photo1" src="./images2/pillows_cvr.jpg" alt="">
-						<span class="label">calming</span></a>
-					<a href="#">
-						<img class="photo1" src="./images2/tonics_cvr.jpg" alt="">
-						<span class="label">tonics</span></a>
-					<a href="#">
-						<img class="photo1" src="./images2/little_extras_cvr.jpg" alt="">
-						<span class="label">little extras</span>
-					</a>
-					<a href="#">
-						<img class="photo1" src="./images2/flowers2.jpg" alt="">
-						<span class="label">beauty</span>
-					</a>
-					<a href="#">
-						<img class="photo1" src="./images2/iced_tea_cvr.jpg" alt="">
-						<span class="label">iced tea</span>
-					</a>
-					<a href="#">
-						<img class="photo1" src="./images2/taylor_made_cvr.jpg" alt="">
-						<span class="label">taylor made</span>
-					</a>
-		    </section>
+			
 			<section id="tea_listings">
 				  <!-- Calming> -->
 					  <div class="C" id="calmeChaud">
@@ -82,7 +59,7 @@
 						<div class="buy">
 							<p class="price">40g&nbsp;&nbsp;6,50€</p>
 					        <form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
-								<input name="userid" type="hidden" value="B7179736">
+								<input name="userid" type="hidden" value="B4175540">
 								<input name="product" type="hidden" value="Au Calme au Chaud">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
@@ -102,7 +79,7 @@
 						<div class="buy">
 							<p class="price">40g&nbsp;&nbsp;6,50€</p>
 							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
-								<input name="userid" type="hidden" value="B7179736">
+								<input name="userid" type="hidden" value="B4175540">
 								<input name="product" type="hidden" value="L'Orangerie">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
@@ -122,7 +99,7 @@
 						<div class="buy">
 							<p class="price">35g&nbsp;&nbsp;6,50€</p>
 							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
-								<input name="userid" type="hidden" value="B7179736">
+								<input name="userid" type="hidden" value="B4175540">
 								<input name="product" type="hidden" value="Blue Moon">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
@@ -146,7 +123,7 @@
 								<input name="product" type="hidden" value="Full Moon">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
+								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
 							</form>
 						</div>
 					  </div>
@@ -167,7 +144,7 @@
 								<input name="product" type="hidden" value="Madame">
 								<input name="price" type="hidden" value="8.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
+								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
 							</form>
 						</div>
 					</div>
@@ -187,7 +164,7 @@
 								<input name="product" type="hidden" value="Monsieur">
 								<input name="price" type="hidden" value="8.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
+								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
 							</form>
 						</div>
 					</div>
@@ -207,7 +184,7 @@
 								<input name="product" type="hidden" value="Si Amore">
 								<input name="price" type="hidden" value="8.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
+								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
 							</form>
 						</div>
 					</div>
@@ -227,7 +204,7 @@
 								<input name="product" type="hidden" value="Samarcanda">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
+								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
 							</form>
 						</div>
 					</div>
@@ -247,7 +224,7 @@
 								<input name="product" type="hidden" value="Le Feu">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
+								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
 							</form>
 						</div>
 					</div>
@@ -269,7 +246,7 @@
 								<input name="product" type="hidden" value="Trop Mange">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
+								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
 							</form>
 						</div>
 					</div>
@@ -280,7 +257,7 @@
 							<h5>Quick! Afore the first chills set in!</h5>
 							<p class="composicao">
 							Lavender, Equinacea, Eucalyptus, Ginger, Rose, Lemon Thyme</p>
-							<p class="descricao">The perfect tea to have at home when the first chills set in!  Rich in eucalyptus oils, it can also be used for inhalation if the chills have already set in (prepare a <a href="recipes.html#decoccion">decoction</a> then).</p>
+							<p class="descricao">The perfect tea to have at home when the first chills set in!  Rich in eucalyptus oils, it can also be used for inhalation if the chills have already set in (prepare a decoction then).</p>
 						</div>
 						<div class="buy">
 							<p class="price">55g&nbsp;&nbsp;6,50€</p>
@@ -289,7 +266,7 @@
 								<input name="product" type="hidden" value="Adieu Mon Rhume">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
+								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
 							</form>
 						</div>
 					</div>
@@ -309,7 +286,7 @@
 								<input name="product" type="hidden" value="Pure">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
+								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
 							</form>
 						</div>
 					</div>
@@ -329,7 +306,7 @@
 								<input name="product" type="hidden" value="Circulez">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
+								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
 							</form>
 						</div>
 					</div>
@@ -350,7 +327,7 @@
 								<input name="product" type="hidden" value="Slim">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
+								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
 							</form>
 						</div>
 					</div>
@@ -370,9 +347,16 @@
 								<input name="product" type="hidden" value="Skin">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
+								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
 							</form>
 						</div>
 					</div>
 			</section>
 		</main>
+		<footer>
+			<p id="legal">&#169;2017 My Cha</p>
+			<a href="./terms.html">Terms &amp; Conditions</a>
+		</footer>
+	  </div>
+  </body>
+</html>
