--- a/mycha_mob/infusions.html
+++ b/mycha_mob/infusions.html
@@ -48,9 +48,12 @@
 		<main>
 			  <h2>The Herbal Teas</h2>
 			  <section class="tea_family">
-			        <a href="#"><img class="photo1" src="./images2/pillows_cvr.jpg" alt="">
+			        <a href="#">
+				        <img class="photo1" src="./images2/pillows_cvr.jpg" alt="">
 						<span class="label">calming</span></a>
-					<a href="#"><img class="photo1" src="./images2/tonics_cvr.jpg" alt=""><span class="label">tonics</span></a>
+					<a href="#">
+						<img class="photo1" src="./images2/tonics_cvr.jpg" alt="">
+						<span class="label">tonics</span></a>
 					<a href="#">
 						<img class="photo1" src="./images2/little_extras_cvr.jpg" alt="">
 						<span class="label">little extras</span>
@@ -59,11 +62,19 @@
 						<img class="photo1" src="./images2/flowers2.jpg" alt="">
 						<span class="label">beauty</span>
 					</a>
-			  </section>
-			  
+					<a href="#">
+						<img class="photo1" src="./images2/iced_tea_cvr.jpg" alt="">
+						<span class="label">iced tea</span>
+					</a>
+					<a href="#">
+						<img class="photo1" src="./images2/taylor_made_cvr.jpg" alt="">
+						<span class="label">taylor made</span>
+					</a>
+		    </section>
 		</main>
 		<footer>
 			<p id="legal">&#169;2017 My Cha</p>
+			<a href="./terms.html">Terms &amp; Conditions</a>
 		</footer>
 	  </div>
   </body>
