--- a/mycha_mob/thankyou.html
+++ b/mycha_mob/thankyou.html
@@ -3,7 +3,6 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>MyCha infusões • herbal infusions</title>
-	<link href="https://fonts.googleapis.com/css?family=Asap|Cardo:400,700" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Montserrat:200" rel="stylesheet">
 	<link type="text/css" rel="stylesheet" href="css/style.css">
 	<meta http-equiv="content-type" content="text/html;charset=utf-8">
@@ -50,7 +49,7 @@
 			<h2>Contact Us</h2>
 			<div class="align_center">
 				<div id="contact_form">
-				<p>My Cha wants to hear from you!<br />Questions? Contact us:</p>
+				<p>Thank you. Your message has been sent!</p>
 					<form action="feedback.php" method="post" id="tswfbform" accept-charset="UTF-8">
 						<label for="tswname">Name</label> 
 						<input type="text" name="fullname"  id="tswname" size="39" />
@@ -72,7 +71,6 @@
 		</main>
 		<footer>
 			<p id="legal">&#169;2017 My Cha</p>
-			<a href="./terms.html">Terms &amp; Conditions</a>
 		</footer>
 	</div>
 </body>
