--- a/mycha_mob/error.html
+++ b/mycha_mob/error.html
@@ -3,7 +3,6 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>MyCha infusões • herbal infusions</title>
-	<link href="https://fonts.googleapis.com/css?family=Asap|Cardo:400,700" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Montserrat:200" rel="stylesheet">
 	<link type="text/css" rel="stylesheet" href="css/style.css">
 	<meta http-equiv="content-type" content="text/html;charset=utf-8">
@@ -49,25 +48,8 @@
 		<main>
 			<h2>Contact Us</h2>
 			<div class="align_center">
-				<div id="contact_form">
-				<p>My Cha wants to hear from you!<br />Questions? Contact us:</p>
-					<form action="feedback.php" method="post" id="tswfbform" accept-charset="UTF-8">
-						<label for="tswname">Name</label> 
-						<input type="text" name="fullname"  id="tswname" size="39" />
-						<hr><br />
-						<label for="tswemail">Email</label> 
-						<input type="text"  id="tswemail" name="email" size="39" />
-						<hr><br />
-						<label for="tswcomments">Comments</label>
-						<br />
-						<textarea rows="15" cols="45" name="comments" id="tswcomments"></textarea>
-						<br />
-						<input id="tswsubmit" type="submit" value="Send Feedback" />
-					</form>
-				</div>
-				<div id="contacts">
-				    <span >My Cha&nbsp;&ndash;&nbsp; Lisbon, Portugal</span>&bullet;<span>+351 919 198 988 </span>&bullet;<span>contact@mycha.org</span>
-			    </div>
+				<p>ERROR<br />
+Please try again using the back button on your browser. <br />Make sure you have inserted your name, email and message.</p>
 			</div>
 		</main>
 		<footer>
