--- a/mycha_mob/index.html
+++ b/mycha_mob/index.html
@@ -48,50 +48,10 @@
 		</header>
 		<main>
 			<h1>natural herbal teas for body and soul</h1>
-
-			<!-- <section class="section_menu clearfix">
-			        <a href="#infusoes">
-						<img src="images2/book_cvr.jpg" alt="">
-						<div>
-							<h4>as infusões</h4>
-						</div>
-					</a>
-					<a href="#sinto-me">
-						<img src="images2/pillows_cvr.jpg" alt="">
-						<div>
-							<h4>hoje sinto-me...</h4>
-						</div>
-					</a>
-					<a href="#receitas">
-						<img src="images2/bowl_cvr.jpg" alt="">
-						<div>
-							<h4>receitas</h4>
-						</div>
-					</a>
-					<a href="#comprar">
-						<img src="images2/packages_cvr.jpg" alt="">
-						<div>
-							<h4>comprar</h4>
-						</div>
-					</a>
-					
-					
-		        </section> -->
 		</main>
 		<footer>
 			<p id="legal">&#169;2017 My Cha</p>
-			<!-- <a href="#press">
-						<img src="images2/" alt="">
-						<div>
-							<h4>press</h4>
-						</div>
-					</a>
-					<a href="#contacto">
-						<img src="images2/" alt="">
-						<div>
-							<h4>contacto</h4>
-						</div>
-					</a> -->
+			<a href="./terms.html">Terms &amp; Conditions</a>
 		</footer>
 	</div>
 </body>
