--- a/mycha_mob/about.html
+++ b/mycha_mob/about.html
@@ -32,10 +32,9 @@
 				</a>
 				<nav>
 					<a id="mobile">menu&nbsp;&nbsp;&#9776;</a>
-					<a href="./index.html">home</a>
-					<a href="#receitas">recipes</a>
+					<a href="./infusions.html">infusions</a>
+					<a href="./about.html">about</a>
 					<a href="./buy.html">buy</a>
-					<a href="#press">press</a>
 					<a href="./contact.html">contact</a>
 				</nav>
 				<a id="fb" href="https://www.facebook.com/mychaface">
