--- a/mycha_mob/infusions.html
+++ b/mycha_mob/infusions.html
@@ -34,10 +34,7 @@
 					<a id="mobile">menu&nbsp;&nbsp;&#9776;</a>
 					<a href="./infusions.html">infusions</a>
 					<a href="./about.html">about</a>
-					<!-- <a href="#sinto-me">hoje sinto-me</a> -->
-					<!-- <a href="#receitas">receitas</a> -->
 					<a href="./buy.html">buy</a>
-					<!-- <a href="#press">press</a> -->
 					<a href="./contact.html">contact</a>
 				</nav>
 				<a id="fb" href="https://www.facebook.com/mychaface">
@@ -48,25 +45,25 @@
 		<main>
 			  <h2>The Herbal Teas</h2>
 			  <section class="tea_family">
-			        <a href="#">
+			        <a href="./buy.html">buy</a>
 				        <img class="photo1" src="./images2/pillows_cvr.jpg" alt="">
 						<span class="label">calming</span></a>
-					<a href="#">
+					<a href="./buy.html">buy</a>
 						<img class="photo1" src="./images2/tonics_cvr.jpg" alt="">
 						<span class="label">tonics</span></a>
-					<a href="#">
+					<a href="./buy.html">buy</a>
 						<img class="photo1" src="./images2/little_extras_cvr.jpg" alt="">
 						<span class="label">little extras</span>
 					</a>
-					<a href="#">
+					<a href="./buy.html">buy</a>
 						<img class="photo1" src="./images2/flowers2.jpg" alt="">
 						<span class="label">beauty</span>
 					</a>
-					<a href="#">
+					<a href="./buy.html">buy</a>
 						<img class="photo1" src="./images2/iced_tea_cvr.jpg" alt="">
 						<span class="label">iced tea</span>
 					</a>
-					<a href="#">
+					<a href="./buy.html">buy</a>
 						<img class="photo1" src="./images2/taylor_made_cvr.jpg" alt="">
 						<span class="label">taylor made</span>
 					</a>
