fixed menus etc

--- a/mycha_mob/infusions.html
+++ b/mycha_mob/infusions.html
@@ -45,25 +45,25 @@
 		<main>
 			  <h2>The Herbal Teas</h2>
 			  <section class="tea_family">
-			        <a href="./buy.html">buy</a>
+			        <a href="./buy.html">
 				        <img class="photo1" src="./images2/pillows_cvr.jpg" alt="">
 						<span class="label">calming</span></a>
-					<a href="./buy.html">buy</a>
+					<a href="./buy.html#madame">
 						<img class="photo1" src="./images2/tonics_cvr.jpg" alt="">
 						<span class="label">tonics</span></a>
-					<a href="./buy.html">buy</a>
+					<a href="./buy.html#tropMange">
 						<img class="photo1" src="./images2/little_extras_cvr.jpg" alt="">
 						<span class="label">little extras</span>
 					</a>
-					<a href="./buy.html">buy</a>
+					<a href="./buy.html#slim">
 						<img class="photo1" src="./images2/flowers2.jpg" alt="">
 						<span class="label">beauty</span>
 					</a>
-					<a href="./buy.html">buy</a>
+					<a href="./buy.html">
 						<img class="photo1" src="./images2/iced_tea_cvr.jpg" alt="">
 						<span class="label">iced tea</span>
 					</a>
-					<a href="./buy.html">buy</a>
+					<a href="./buy.html">
 						<img class="photo1" src="./images2/taylor_made_cvr.jpg" alt="">
 						<span class="label">taylor made</span>
 					</a>
