--- a/mycha_mob/buy.html
+++ b/mycha_mob/buy.html
@@ -57,7 +57,7 @@
 						<div class="buy">
 							<p class="price">40g&nbsp;&nbsp;6,50€</p>
 					        <form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
-								<input name="userid" type="hidden" value="B4175540">
+								<input name="userid" type="hidden" value="B7179736">
 								<input name="product" type="hidden" value="Au Calme au Chaud">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
@@ -77,7 +77,7 @@
 						<div class="buy">
 							<p class="price">40g&nbsp;&nbsp;6,50€</p>
 							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
-								<input name="userid" type="hidden" value="B4175540">
+								<input name="userid" type="hidden" value="B7179736">
 								<input name="product" type="hidden" value="L'Orangerie">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
@@ -97,7 +97,7 @@
 						<div class="buy">
 							<p class="price">35g&nbsp;&nbsp;6,50€</p>
 							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
-								<input name="userid" type="hidden" value="B4175540">
+								<input name="userid" type="hidden" value="B7179736">
 								<input name="product" type="hidden" value="Blue Moon">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
@@ -121,7 +121,7 @@
 								<input name="product" type="hidden" value="Full Moon">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
+								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
 					  </div>
@@ -142,7 +142,7 @@
 								<input name="product" type="hidden" value="Madame">
 								<input name="price" type="hidden" value="8.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
+								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
 					</div>
@@ -162,7 +162,7 @@
 								<input name="product" type="hidden" value="Monsieur">
 								<input name="price" type="hidden" value="8.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
+								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
 					</div>
@@ -182,7 +182,7 @@
 								<input name="product" type="hidden" value="Si Amore">
 								<input name="price" type="hidden" value="8.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
+								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
 					</div>
@@ -202,7 +202,7 @@
 								<input name="product" type="hidden" value="Samarcanda">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
+								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
 					</div>
@@ -222,7 +222,7 @@
 								<input name="product" type="hidden" value="Le Feu">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
+								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
 					</div>
@@ -244,7 +244,7 @@
 								<input name="product" type="hidden" value="Trop Mange">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
+								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
 					</div>
@@ -264,7 +264,7 @@
 								<input name="product" type="hidden" value="Adieu Mon Rhume">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
+								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
 					</div>
@@ -284,7 +284,7 @@
 								<input name="product" type="hidden" value="Pure">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
+								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
 					</div>
@@ -304,7 +304,7 @@
 								<input name="product" type="hidden" value="Circulez">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
+								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
 					</div>
@@ -325,7 +325,7 @@
 								<input name="product" type="hidden" value="Slim">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
+								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
 					</div>
@@ -345,7 +345,7 @@
 								<input name="product" type="hidden" value="Skin">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<!-- <input class="add-to-cart" type="submit" value="add to cart"> -->
+								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
 					</div>
