added jquery to display family detail

--- a/mycha_mob/buy.html
+++ b/mycha_mob/buy.html
@@ -43,8 +43,8 @@
 		<main>
 			<h2>shop my cha!</h2>
 			
-			<section id="tea_listings">
-				  <!-- Calming> -->
+			<section class="tea_listings">
+				  <!-- Calming -->
 					  <div class="C" id="calmeChaud">
 						<div class="tea_details">
 							<img class="photo1" src="./images/calme_L.jpg" />
@@ -125,7 +125,7 @@
 							</form>
 						</div>
 					  </div>
-					<!-- Tonics -->
+					<!-- Tonic -->
 					  <div class="T" id="madame">
 						<div class="tea_details">
 							<img class="photo1" src="./images/madame_L.jpg" />
